--- a/chainreact.html
+++ b/chainreact.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <title>Chain Reaction Game</title>
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
         <script src="chainreact.js"></script>
     </head>
-    <body>
+    <body style="background-color: #aaaaaa;">
         <canvas id="gameCanvas"></canvas>
     </body>
 </html>
