--- a/chainreact2.html
+++ b/chainreact2.html
@@ -5,10 +5,23 @@
         <title>Chain Reaction2 Game</title>
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
         <script src="chainreact2.js"></script>
+        <style>
+            html,
+            body {
+              margin: 0;
+              padding: 0;
+            }
+            div {
+                height: 1em;
+                overflow: hidden;
+            }
+          </style>
     </head>
     <body style="background-color: #aaaaaa;">
         <h1>OB - Chain Reaction</h1>
-        <div id="floatedOver">...</div>
-        <canvas id="gameCanvas"></canvas>
+        <div id="floatedOver" style="height:20px;">...</div>
+        <div id="waveInfo">WAVES</div>
+        <div id="crashed" >CRASHES</div>
+        <!-- <canvas id="gameCanvas"></canvas> -->
     </body>
 </html>
