--- a/chainreact.html
+++ b/chainreact.html
@@ -2,11 +2,26 @@
 
 <html>
     <head>
-        <title>Chain Reaction Game</title>
+        <title>Chain Reaction2 Game</title>
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
         <script src="chainreact.js"></script>
+        <style>
+            html,
+            body {
+              margin: 0;
+              padding: 0;
+            }
+            div {
+                height: 1em;
+                overflow: hidden;
+            }
+          </style>
     </head>
     <body style="background-color: #aaaaaa;">
-        <canvas id="gameCanvas"></canvas>
+        <h1>OB - Chain Reaction</h1>
+        <div id="floatedOver" style="height:20px;">...</div>
+        <div id="waveInfo">WAVES</div>
+        <div id="crashed" >CRASHES</div>
+        <!-- <canvas id="gameCanvas"></canvas> -->
     </body>
 </html>
